Port Animania Reborn 0.1.1 to Forge 1.20.1